k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timelog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timelog
  template:
    metadata:
      labels:
        app: timelog
    spec:
      containers:
        - name: timelog-web
          image: nightlord851108/timelog_web
          imagePullPolicy: Always

        - name: timelog-server
          image: nightlord851108/timelog_server
          imagePullPolicy: Always
